Bug 482302 - When multiple files are dragged from Dolphin to the Plasma desktop, only one visibly appears on the desktop until plasmashell is restarted
Summary: When multiple files are dragged from Dolphin to the Plasma desktop, only one ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.0.0
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-03 13:01 UTC by BOF
Modified: 2024-03-08 03:14 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.1
Sentry Crash Report:


Attachments
files drag+dropped on the desktop (1.18 MB, image/png)
2024-03-03 13:01 UTC, BOF
Details
desktop folder in dolphin (81.54 KB, image/png)
2024-03-03 13:01 UTC, BOF
Details
two files drag+dropped on the desktop (3.56 MB, video/webm)
2024-03-03 13:15 UTC, BOF
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BOF 2024-03-03 13:01:00 UTC
Created attachment 166354 [details]
files drag+dropped on the desktop

SUMMARY
After I drag&dropped 2 files from a window in dolphin onto the desktop, one file was gone. It I could see both of them in the 'Desktop' folder in Dolphin. It turns out that they are placed on top of and not next to each other.

When you press 'Ctrl + A' on the desktop to delete the files, you still only select the top file. After the top file is deleted, the bottom one shows up.

STEPS TO REPRODUCE
1. Drag&Drop two files from a folder from the file manager onto the workspace

OBSERVED RESULT
Files are placed on top of each other and only one file is visible

EXPECTED RESULT
Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.5.0-21-generic (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 4800H with Radeon Graphics
Memory: 30.7 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: Micro-Star International Co., Ltd.
Product Name: Bravo 17 A4DDR
System Version: REV:1.0

ADDITIONAL INFORMATION
(No idea if this is in the right bug category, but I had no idea where to put it)
Comment 1 BOF 2024-03-03 13:01:59 UTC
Created attachment 166355 [details]
desktop folder in dolphin
Comment 2 BOF 2024-03-03 13:15:22 UTC
Created attachment 166357 [details]
two files drag+dropped on the desktop
Comment 3 Nate Graham 2024-03-05 17:34:10 UTC
Can reproduce. Thankfully restarting plasmashell makes the other files appear in the top-left-most position, rather than at the dragged position.
Comment 4 Marco Martin 2024-03-06 10:59:51 UTC
Interestingly this seems to happen only when folderview is used as a Containment, but not when used as an Applet, so must be in the differences there, perhaps in Positioner
Comment 5 Bug Janitor Service 2024-03-06 13:40:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2085
Comment 6 Marco Martin 2024-03-06 17:04:54 UTC
Git commit 337a95c328ae380e275adeab14f827ae36d03fb6 by Marco Martin.
Committed on 06/03/2024 at 17:04.
Pushed by mart into branch 'master'.

Don't overwrite files in the model positions on drop

When dropping multiple files, Positioner calculated the same drop index
for all of the files, obtaining a wrong final model.

Make sure every move is mapped to an empty space so that every dropped
file ends up in the final mapped model

M  +8    -3    containments/desktop/plugins/folder/positioner.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/337a95c328ae380e275adeab14f827ae36d03fb6
Comment 7 Marco Martin 2024-03-06 17:07:11 UTC
Git commit 2d56a5a01fdc25d381784ae5c6f3c88674c568d5 by Marco Martin.
Committed on 06/03/2024 at 17:06.
Pushed by mart into branch 'Plasma/6.0'.

Don't overwrite files in the model positions on drop

When dropping multiple files, Positioner calculated the same drop index
for all of the files, obtaining a wrong final model.

Make sure every move is mapped to an empty space so that every dropped
file ends up in the final mapped model

M  +8    -3    containments/desktop/plugins/folder/positioner.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/2d56a5a01fdc25d381784ae5c6f3c88674c568d5