Don't overwrite files in the model positions on drop

When dropping multiple files, Positioner calculated the same drop index
for all of the files, obtaining a wrong final model.

Make sure every move is mapped to an empty space so that every dropped
file ends up in the final mapped model

BUG:482302